[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Script/Create.gd" type="Script" id=1]

[node name="Create" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -52.0
margin_right = 73.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 73, 52 )
custom_constants/separation = 11
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 146.0
margin_bottom = 14.0
text = "Insert your username: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 146.0
margin_bottom = 51.0
text = "Anonymous"
max_length = 20
expand_to_text_length = true
clear_button_enabled = true

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 146.0
margin_bottom = 62.0

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 146.0
margin_bottom = 73.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 146.0
margin_bottom = 104.0
text = "Submit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
