[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Script/Create.gd" type="Script" id=1]

[node name="Create" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -52.0
margin_right = 73.0
margin_bottom = 52.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 73, 52 )
custom_constants/separation = 11
alignment = 1

[node name="Sign Up" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 146.0
margin_bottom = 46.0
text = "Sign Up"

[node name="Log In" type="Button" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 146.0
margin_bottom = 77.0
text = "Log In"

[connection signal="pressed" from="VBoxContainer/Sign Up" to="." method="_on_Sign_Up_pressed"]
[connection signal="pressed" from="VBoxContainer/Log In" to="." method="_on_Log_In_pressed"]
